--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,9 @@ services:
   - type: web
     name: economic-energy-trends
     env: static
-    buildCommand: echo "No build command"
-    staticPublishPath: .
+    buildCommand: null
+    staticPublishPath: ./
     routes:
       - type: rewrite
-        source: /*
+        source: /
         destination: /index.html
