--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: economic-energy-trends
     env: static
     buildCommand: null
-    staticPublishPath: ./
+    staticPublishPath: .
     routes:
       - type: rewrite
         source: /
